@@ -183,9 +183,6 @@ class Axis(widget.Widget):
         widget.Widget.__init__(self, parent, name=name)
         s = self.settings
 
-        if type(self) == Axis:
-            self.linkToStylesheet()
-
         if self.name == 'y' and s.direction != 'vertical':
             s.direction = 'vertical'
         elif self.name == 'x' and s.direction != 'horizontal':
